[package]
name = "raw-hid"
version = "0.1.0"
authors = ["Pedro Correa <pedro.correa@dextra-sw.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.hidapi]
version = "1.2"
default-features = false
features = ["linux-static-hidraw"]